# eoreader

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  environment-doc.yml  environment.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  tox-conda.ini  tox-snap.ini  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: mirror_to_gitlab.yml  publish.yml  test.yml
CI/: __init__.py  scripts_utils.py
CI/COTS/: Fiona-1.8.18-cp37-cp37m-win_amd64.whl  Fiona-1.8.19-cp37-cp37m-win_amd64.whl  Shapely-1.7.1-cp37-cp37m-win_amd64.whl  geopandas-0.8.2-py3-none-any.whl  geopandas-0.9.0-py3-none-any.whl  rasterio-1.2.0-cp37-cp37m-win_amd64.whl  rasterio-1.2.3-cp37-cp37m-win_amd64.whl
CI/SCRIPTS/: __init__.py  scripts_utils.py  test_bands.py  test_broken_s2.py  test_custom.py  test_end_to_end.py  test_index.py  test_others.py  test_satellites.py  test_stac.py  test_stac_creation.py  test_stac_items.py
CI/SCRIPTS_SNAP/: test_all_sar_snap.py  test_all_sat_end_to_end_on_disk.py  test_satellites_on_disk.py  test_snap.py
CI/SCRIPTS_WEEKLY/: test_all_sat_end_to_end_on_disk.py  test_broken_s2.py  test_custom.py  test_index.py  test_satellites.py  test_stac_creation.py  test_stac_items.py
CI/on_push/: test_end_to_end.py  test_index.py  test_satellites.py  test_stac_items.py
CI/weekly/: test_all_sat_end_to_end_on_disk.py  test_satellites.py  test_stac_creation.py  test_stac_items.py
ci/: conftest.py  scripts_utils.py
ci/on_push/: test_bands.py  test_custom.py  test_end_to_end.py  test_index.py  test_mask_duplicate_loading.py  test_others.py  test_satellites.py  test_stac_items.py
ci/weekly/: test_all_sat_end_to_end_on_disk.py  test_custom.py  test_index.py  test_masks.py  test_satellites.py  test_stac_creation.py
data/gpt_graphs/: cplx_s1_preprocess_default.xml  grd_sar_preprocess_default.xml  grd_sar_preprocess_fallback.xml  preprocess_s3.xml
doc/: index.html  index.js
doc/eoreader/: env_vars.html  exceptions.html  index.html  reader.html  utils.html
doc_template/: config.mako  css.mako  html.mako  index.html  logo.mako
docs/: conf.py  custom.md  doc-search.html  faq.md  history.md  index.html  index.js  index.md  main_features.md  optical.md  optical_band_mapping.md  sar.md
docs/.jupyter_cache/: global.db
docs/_autosummary/: eoreader.bands.alias.is_band.rst  eoreader.bands.alias.is_clouds.rst  eoreader.bands.alias.is_dem.rst  eoreader.bands.alias.is_index.rst  eoreader.bands.alias.is_optical_band.rst  eoreader.bands.alias.is_sar_band.rst  eoreader.bands.alias.rst  eoreader.bands.alias.to_band.rst  eoreader.bands.alias.to_str.rst  eoreader.bands.bands.BandNames.rst  eoreader.bands.bands.CloudsBandNames.rst  eoreader.bands.bands.CloudsBands.rst  eoreader.bands.bands.DemBandNames.rst  eoreader.bands.bands.DemBands.rst  eoreader.bands.bands.OpticalBandNames.rst  eoreader.bands.bands.OpticalBands.rst  eoreader.bands.bands.SarBandNames.rst  eoreader.bands.bands.SarBands.rst  eoreader.bands.bands.rst  eoreader.bands.index.AFRI_1_6.rst  eoreader.bands.index.AFRI_2_1.rst  eoreader.bands.index.AWEInsh.rst  eoreader.bands.index.AWEIsh.rst  eoreader.bands.index.BAI.rst  eoreader.bands.index.BSI.rst  eoreader.bands.index.CIG.rst  eoreader.bands.index.DSWI.rst  eoreader.bands.index.GLI.rst  eoreader.bands.index.GNDVI.rst  eoreader.bands.index.MNDWI.rst  eoreader.bands.index.NBR.rst  eoreader.bands.index.NDGRI.rst  eoreader.bands.index.NDMI.rst  eoreader.bands.index.NDRE2.rst  eoreader.bands.index.NDRE3.rst  eoreader.bands.index.NDVI.rst  eoreader.bands.index.NDWI.rst  (+97 more)
docs_sphinx/: conf.py  index.md  main_features.md  optical.md  sar.md
documentation/: examples.md  main_features.md  optical.md  optical_detailed.md  sar.md  sar_detailed.md  sources.md  sources_optical.md  sources_sar.md
eoreader/: __init__.py  __meta__.py  _stac.py  bands.py  env_vars.py  eoreader.py  exceptions.py  index.py  keywords.py  reader.py  utils.py  version.py
examples/: __init__.py  base.ipynb  water_detection.ipynb
(+1260 files in other folders)
