[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eoreader"
authors = [
    {name = "ICube-SERTIT", email = "dev-sertit@unistra.fr"},
]
description = "Remote-sensing opensource python library reading optical and SAR constellations, loading and stacking bands, clouds, DEM and spectral indices in a sensor-agnostic way."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml",
    "h5netcdf",
    "scipy",
    "rasterio>=1.3.0",
    "xarray>=0.18.0",
    "rioxarray>=0.10.0",
    "geopandas>=0.11.0",
    "sertit[full]>=1.27.0",
    "spyndex>=0.3.0",
    "pyresample",
    "zarr",
    "rtree",
    "validators",
    "methodtools",
    "dicttoxml",
]
