[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eoreader*", "data"]
namespaces = false

[tool.setuptools.package-data]
eoreader = ["*.xml"]

[project]
name = "eoreader"
authors = [
    {name = "ICube-SERTIT", email = "dev-sertit@unistra.fr"},
]
description = "Remote-sensing opensource python library reading optical and SAR constellations, loading and stacking bands, clouds, DEM and spectral indices in a sensor-agnostic way."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml",
    "h5netcdf",
    "scipy",
    "rasterio>=1.3.10",  # numpy >= 2
    "xarray>=2024.06.0",  # numpy >= 2
    "rioxarray>=0.10.0",
    "odc-geo>=0.4.6",
    "geopandas>=0.14.4",
    "sertit[full]>=1.44.1",
    "spyndex>=0.3.0",
    "pyresample",
    "zarr",
    "rtree",
    "cloudpathlib[s3]>=0.12.1",
    "validators",
    "methodtools",
    "dicttoxml",
    "tifffile",
    "ephem",
]

dynamic = ["version"]

[project.optional-dependencies]
"stac" = [
    "pystac[validation]",
    "stac-asset",
    "planetary_computer",
]

[tool.setuptools.dynamic]
version = {attr = "eoreader.__version__"}

[project.urls]
Bug_Tracker = "https://github.com/sertit/eoreader/issues"
Documentation =  "https://eoreader.readthedocs.io/latest/"
Source_Code = "https://github.com/sertit/eoreader"

[tool.ruff]
exclude = [
    "docs"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]


[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

# Pytest options
[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(name)s: %(asctime)s - [%(levelname)s] - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "INFO"

[tool.coverage.run]
omit = ["*/__init__.py"]


[tool.typos]
files.extend-exclude = ["*.ipynb", "*.html", ".git/*"]
default.extend-ignore-re = ["_.*_", "\"\\w*\"", "PN", ", fo", "FRE", "THR", "T60HTE", "_BA", "ANC_"]